[project]
name = "file-save"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
  "flet==0.28.3"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "file-save"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}

# --- Android Specific Configuration ---
[tool.flet.android]
split_per_abi = true
min_sdk_version = 21
target_sdk_version = 35# App details that will appear on the device and in the Play Store.
package_name = "com.example.fletfilesaver"
app_name = "File Saver"

# Path to your app's icon. 
# Create an 'assets' folder in your project and place a 512x512 icon.png inside it.
icon = "src/assets/icon.png"

# --- Android Permissions ---
# This is a more comprehensive permission set to cover edge cases.
# While FilePicker handles its own access, some OS versions are stricter
# and expect these to be declared in the manifest to even launch the picker.
[tool.flet.android.permission]
"android.permission.INTERNET" = true
"android.permission.READ_EXTERNAL_STORAGE" = true
"android.permission.WRITE_EXTERNAL_STORAGE" = true
# The MANAGE_EXTERNAL_STORAGE permission is powerful, but declaring it can
# sometimes resolve issues on heavily customized Android systems.
"android.permission.MANAGE_EXTERNAL_STORAGE" = true

# --- Android Manifest Extras ---
# This section is CRUCIAL for compatibility with Android 10 (API 29).
# It adds the requestLegacyExternalStorage attribute to the <application> tag
# in the AndroidManifest.xml file. The previous syntax was incorrect.
# This is the correct way to add the attribute.
[tool.flet.android.manifest_extras]
"application" = [
    '<application android:requestLegacyExternalStorage="true">',
]
